# pylie

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg
diffpy/: __init__.py
diffpy/flow/: flow.py
diffpy/hmanifold/: hmnsphere.py
diffpy/liealgebra/: __init__.py  liealgebra.py
diffpy/liegroup/: __init__.py
diffpy/solve/: __init__.py  solve.py
diffpy/solve_ivp/: __init__.py  solve_ivp.py
diffpy/timestepper/: __init__.py
docs/: example.py  heavy_top_example.py  unit_sphere_example.py
flow/: flow.py
hmanifold/: hmanifold.py  hmnsphere.py
liealgebra/: liealgebra.py
liegroup/: liegroup.py
pylie/liealgebra/: liealgebra.py
pylie/test/: test_so3.py
src/pylie/: __init__.py
src/pylie/hmanifold/: __init__.py  hmheavytop.py  hmnsphere.py  hmpendulum.py
src/pylie/liealgebra/: __init__.py  liealgebra.py
src/pylie/liegroup/: __init__.py  liegroup.py
src/pylie/solve/: __init__.py  solve.py
src/pylie/test/: test_heavytop.py  test_so3.py
src/pylie/timestepper/: __init__.py  timestepper.py
timestepper/: timestepper.py
