[metadata]
# replace with your username:
name = diffpy
version = 0.0.1
author = Erik André Jakobsen
author_email = erikaja@stud.ntnu.no
description = A Python package for solving ordinary differential equations evolving on non-linear manifolds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakobsen/diffpy/
project_urls =
    Bug Tracker = https://github.com/jakobsen/diffpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src